# Kels-Algorithm

./: .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci-cd.yml  release.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  WHITE_PAPER.md
github/ISSUE_TEMPLATE/: security_vulnerability.md
src/: __init__.py  main.py
src/core/: __init__.py  exceptions.py  orchestrator.py  state.py  telemetry.py
src/crypto/: __init__.py  aes_agile.py  binding.py  code_vault.py  hashing.py  isogeny.py  lattice.py
src/defensive/: __init__.py  canaries.py  honeypot.py  ip_blacklist.py  quarantine.py
tests/: __init__.py  test_aes_agile.py  test_attack_trap.py  test_blacklist.py  test_code_vault.py  test_crypto_binding.py  test_lattice_noise.py  test_multi_hash.py
